--- a/menu_de_la_note_enchantee.html
+++ b/menu_de_la_note_enchantee.html
@@ -1,185 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="public/css/style.css">
-    <title>ohmyfood</title>
-    <script src="https://kit.fontawesome.com/a41e9403cf.js" crossorigin="anonymous"></script>
-
-</head>
-<body class=container-menu>
-  
-  <header class="header">
-     <div class="row justify-content__center">
-      <a href="./index.html" style="display: flex; align-items: center; position:relative; left:-58px"><i class="fas fa-arrow-left"></i></a> 
-      <img src="public/images/logo/ohmyfood.png" alt="logo" class="header__img"/>
-     </div>
-    <img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" style="width: 100%; height: 250px ;object-fit: cover;" alt="plat du restaurant"/>
-  </header>
-
-  <section class="menu">
-    <div class="card card--modif row justify-content__between">
-      <h2 class="menu__h2">La note enchantée </h2>
-      <div class="testanimation">
-        <div class="card__picto row justify-content__center"><i class=" far fa-heart"></i></div>
-        <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
-      </div>
-    </div>
-    <!----entrée-->
-  <div class="plat-menu">
-   <article style class="card-Menu--anim-0">
-      <h3 class="menu__titre">ENTREES</h3>
-      <hr/>
-      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-        <div class="card-Menu__body">
-          <h4 class="card__h4">Ravioles de foie gras </h4>
-          <div class="row justify-content__between">
-            <p class="card-Menu__p">Accompagnés de leur créme à la truffe</p>
-            <span class="card-Menu__price">25€</span>
-          </div>
-        </div>
-        <div class="rotate">
-          <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-        </div>
-      </div>
-      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-      <div class="card-Menu__body">
-        <h4 class="card__h4">Caviar osciètre</h4>
-        <div class="row justify-content__between">
-          <p class="card-Menu__p">Sur blini à la farine de blé noir</p>
-          <span class="card-Menu__price">35€</span>
-        </div>
-        </div>
-        <div class="rotate">
-        <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-      </div>
-      </div>
-      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-    <div class="card-Menu__body">
-      <h4 class="card__h4">Homard et espuma de marquereau</h4>
-      <div class="row justify-content__between">
-        <p class="card-Menu__p">Mariné au zests d'orange </p>
-        <span class="card-Menu__price">25€</span>
-      </div>
-    </div>
-    <div class="rotate">
-      <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-    </div>
-      </div>
-      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-        <div class="card-Menu__body">
-          <h4 class="card__h4">Foie gras de canard cuit entier</h4>
-          <div class="row justify-content__between">
-            <p class="card-Menu__p">Confiture de figue et pain toasté</p>
-            <span class="card-Menu__price">35€</span>
-          </div>
-        </div>
-        <div class="rotate">
-          <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-        </div>
-          </div>
-   </article>
-    <!---------------plat-->
-   <article class="card-Menu--anim-1">
-     <h3 class="menu__titre">PLATS</h3>
-     <hr/>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-        <div class="card-Menu__body">
-          <h4 class="card__h4">Noix de coquilles Saint-jacques</h4>
-          <div class="row justify-content__between">
-            <p class="card-Menu__p">Sur lit de purée de céleri-rave</p>
-            <span class="card-Menu__price">40€</span>
-          </div>
-        </div>
-        <div class="rotate">
-          <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-        </div>
-     </div>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-      <div class="card-Menu__body">
-        <h4 class="card__h4">Langoustine poêlée</h4>
-        <div class="row justify-content__between">
-          <p class="card-Menu__p">Purée de patate douce</p>
-          <span class="card-Menu__price">35€</span>
-        </div>
-      </div>
-      <div class="rotate">
-        <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-      </div>
-     </div>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-    <div class="card-Menu__body">
-      <h4 class="card__h4">Mijoté de queue de boeuf</h4>
-      <div class="row justify-content__between">
-        <p class="card-Menu__p">Et riz sauvage aux zests de citron</p>
-        <span class="card-Menu__price">44€</span>
-      </div>
-    </div>
-    <div class="rotate">
-      <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-    </div>
-     </div>
-   </article>
-    <!------dessert-->
-   <article class="card-Menu--anim-2">
-     <h3 class="menu__titre">DESSERT</h3>
-     <hr/>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-        <div class="card-Menu__body">
-          <h4 class="card__h4">Macaron noisette et chocolat</h4>
-          <div class="row justify-content__between">
-            <p class="card-Menu__p">Glace au caramel brun et sel de guérande</p>
-            <span class="card-Menu__price">18€</span>
-          </div>
-        </div>
-        <div class="rotate">
-          <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-        </div>
-     </div>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-      <div class="card-Menu__body">
-        <h4 class="card__h4">Baba au rhum revisité</h4>
-        <div class="row justify-content__between">
-          <p class="card-Menu__p">Avec son coulis de citron</p>
-          <span class="card-Menu__price">22€</span>
-        </div>
-      </div>
-      <div class="rotate">
-        <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-      </div>
-     </div>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-    <div class="card-Menu__body">
-      <h4 class="card__h4">Tarte au citron meringuée</h4>
-      <div class="row justify-content__between">
-        <p class="card-Menu__p">Destructurée</p>
-        <span class="card-Menu__price">23€</span>
-      </div>
-    </div>
-    <div class="rotate">
-      <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-    </div>
-     </div>
-    </article>
-  </div>
-  </section> 
-  <button class="header__btn btn--modif ">Commander</button>
-  <footer class="footer">
-    <img src="public/images/logo/ohmyfood@2x.svg" alt="logo" class="footer__img">
-    <ul>
-      <li class="row">
-        <div class="footer__picto"><i class="fas fa-utensils "></i></div>
-        Suggest a restaurant
-      </li>
-      <li class="row">
-        <div class="footer__picto"><i class="fas fa-hands-helping"></i></div>
-        Become a restaurant
-      </li>
-      <li>Legal</li>
-      <li>Contact</li>
-    </ul>
-  </footer>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link rel="stylesheet" href="public/css/style.css">
+		<title>ohmyfood</title>
+		<script src="https://kit.fontawesome.com/a41e9403cf.js" crossorigin="anonymous"></script>
+	</head>
+	<body class=container-menu>
+		<header class="header">
+			<div class="row justify-content__center">
+				<a href="./index.html" style="display: flex; align-items: center; position:relative; left:-58px"><i class="fas fa-arrow-left"></i></a>
+				<img src="public/images/logo/ohmyfood.png" alt="logo" class="header__img"/>
+			</div>
+			<img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" style="width: 100%; height: 250px ;object-fit: cover;" alt="plat du restaurant"/>
+		</header>
+		<section class="menu">
+			<div class="card card--modif row justify-content__between">
+				<h2 class="menu__h2">La note enchantée </h2>
+				<div class="testanimation">
+					<div class="card__picto row justify-content__center">
+						<i class=" far fa-heart"></i>
+					</div>
+					<div class="picto2 row justify-content__center">
+						<i class="fas fa-heart"></i>
+					</div>
+				</div>
+			</div>
+			<!----entrée-->
+			<div class="plat-menu">
+				<article style class="card-Menu--anim-0">
+					<h3 class="menu__titre">ENTREES</h3>
+					<hr/>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Ravioles de foie gras </h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Accompagnés de leur créme à la truffe
+								</p>
+								<span class="card-Menu__price">25€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Caviar osciètre</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Sur blini à la farine de blé noir
+								</p>
+								<span class="card-Menu__price">35€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Homard et espuma de marquereau</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Mariné au zests d'orange 
+								</p>
+								<span class="card-Menu__price">25€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Foie gras de canard cuit entier</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Confiture de figue et pain toasté
+								</p>
+								<span class="card-Menu__price">35€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+				</article>
+				<!---------------plat-->
+				<article class="card-Menu--anim-1">
+					<h3 class="menu__titre">PLATS</h3>
+					<hr/>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Noix de coquilles Saint-jacques</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Sur lit de purée de céleri-rave
+								</p>
+								<span class="card-Menu__price">40€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Langoustine poêlée</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Purée de patate douce
+								</p>
+								<span class="card-Menu__price">35€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Mijoté de queue de boeuf</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Et riz sauvage aux zests de citron
+								</p>
+								<span class="card-Menu__price">44€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+				</article>
+				<!------dessert-->
+				<article class="card-Menu--anim-2">
+					<h3 class="menu__titre">DESSERT</h3>
+					<hr/>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Macaron noisette et chocolat</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Glace au caramel brun et sel de guérande
+								</p>
+								<span class="card-Menu__price">18€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Baba au rhum revisité</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Avec son coulis de citron
+								</p>
+								<span class="card-Menu__price">22€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Tarte au citron meringuée</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Destructurée
+								</p>
+								<span class="card-Menu__price">23€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+				</article>
+			</div>
+		</section>
+		<button class="header__btn btn--modif ">Commander</button>
+		<footer class="footer">
+			<img src="public/images/logo/ohmyfood@2x.svg" alt="logo" class="footer__img">
+			<ul>
+				<li class="row">
+					<div class="footer__picto">
+						<i class="fas fa-utensils "></i>
+					</div>
+					Suggest a restaurant
+				</li>
+				<li class="row">
+					<div class="footer__picto">
+						<i class="fas fa-hands-helping"></i>
+					</div>
+					Become a restaurant
+				</li>
+				<li>Legal</li>
+				<li>Contact</li>
+			</ul>
+		</footer>
+	</body>
 </html>
