--- a/menu_de_la_palette_du_gout.html
+++ b/menu_de_la_palette_du_gout.html
@@ -1,173 +1,196 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="public/css/style.css">
-    <title>ohmyfood</title>
-    <script src="https://kit.fontawesome.com/a41e9403cf.js" crossorigin="anonymous"></script>
-
-</head>
-<body class=container-menu>
-  
-  <header class="header">
-     <div class="row justify-content__center">
-      <a href="https://aholouchristopher.github.io/Ohmyfood_Project-3_11112021" style="display: flex; align-items: center; position:relative; left:-58px"><i class="fas fa-arrow-left"></i></a> 
-      <img src="public/images/logo/ohmyfood.png" class="header__img" alt="logo" />
-     </div>
-    <img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" style="width: 100%; height: 250px ;object-fit: cover;" alt="plat restaurant"/>
-  </header>
-
-  <section class="menu">
-    <div class="card card--modif row justify-content__between">
-      <h2 class="menu__h2">La palette du goût </h2>
-      <div class="testanimation">
-        <div class="card__picto row justify-content__center"><i class=" far fa-heart"></i></div>
-        <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
-      </div>
-    </div>
-    <!----entrée-->
-  <div class="plat-menu">
-   <article style class="card-Menu--anim-0">
-      <h3 class="menu__titre">ENTREES</h3>
-      <hr/>
-      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-        <div class="card-Menu__body">
-          <h4 class="card__h4">Fricassée d'escargot</h4>
-          <div class="row justify-content__between">
-            <p class="card-Menu__p">Au piment d'espelette</p>
-            <span class="card-Menu__price">25€</span>
-          </div>
-        </div>
-        <div class="rotate">
-          <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-        </div>
-      </div>
-      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-      <div class="card-Menu__body">
-        <h4 class="card__h4">Foie gras de canad mi-cuit</h4>
-        <div class="row justify-content__between">
-          <p class="card-Menu__p">Et ses copeaux de truffe noire</p>
-          <span class="card-Menu__price">35€</span>
-        </div>
-        </div>
-        <div class="rotate">
-        <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-      </div>
-      </div>
-      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-        <div class="card-Menu__body">
-          <h4 class="card__h4">Oeuf au plat</h4>
-          <div class="row justify-content__between">
-            <p class="card-Menu__p">Assaisonné à la truffe sur lit de ikea </p>
-             <span class="card-Menu__price">20€</span>
-          </div>
-        </div>
-        <div class="rotate">
-      <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-        </div>
-      </div>
-   </article>
-    <!---------------plat-->
-   <article class="card-Menu--anim-1">
-     <h3 class="menu__titre">PLATS</h3>
-     <hr/>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-        <div class="card-Menu__body">
-          <h4 class="card__h4">Filet de boeuf au herbes</h4>
-          <div class="row justify-content__between">
-            <p class="card-Menu__p">Accompagné de sa ribambelle de légume</p>
-            <span class="card-Menu__price">40€</span>
-          </div>
-        </div>
-        <div class="rotate">
-          <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-        </div>
-     </div>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-      <div class="card-Menu__body">
-        <h4 class="card__h4">Parmentier de queue de boeuf </h4>
-        <div class="row justify-content__between">
-          <p class="card-Menu__p">A la truffe noire sur sa purée de panais</p>
-          <span class="card-Menu__price">35€</span>
-        </div>
-      </div>
-      <div class="rotate">
-        <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-      </div>
-     </div>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-    <div class="card-Menu__body">
-      <h4 class="card__h4">Filet de turbot</h4>
-      <div class="row justify-content__between">
-        <p class="card-Menu__p">aux agrumes</p>
-        <span class="card-Menu__price">44€</span>
-      </div>
-    </div>
-    <div class="rotate">
-      <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-    </div>
-     </div>
-   </article>
-    <!------dessert-->
-   <article class="card-Menu--anim-2">
-     <h3 class="menu__titre">DESSERT</h3>
-     <hr/>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-        <div class="card-Menu__body">
-          <h4 class="card__h4">Paris-Brest</h4>
-          <div class="row justify-content__between">
-            <p class="card-Menu__p">Revisité</p>
-            <span class="card-Menu__price">18€</span>
-          </div>
-        </div>
-        <div class="rotate">
-          <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-        </div>
-     </div>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-      <div class="card-Menu__body">
-        <h4 class="card__h4">Macaron au chocolat d'exception</h4>
-        <div class="row justify-content__between">
-          <p class="card-Menu__p">et glace à la vanille de Madagascar</p>
-          <span class="card-Menu__price">22€</span>
-        </div>
-      </div>
-      <div class="rotate">
-        <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-      </div>
-     </div>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-    <div class="card-Menu__body">
-      <h4 class="card__h4">Mousse au chocolat</h4>
-      <div class="row justify-content__between">
-        <p class="card-Menu__p">Au piment d'espelette et à la truffe noire</p>
-        <span class="card-Menu__price">23€</span>
-      </div>
-    </div>
-    <div class="rotate">
-      <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-    </div>
-     </div>
-    </article>
-  </div>
-  </section> 
-  <button class="header__btn btn--modif ">Commander</button>
-  <footer class="footer">
-    <img src="public/images/logo/ohmyfood@2x.svg" class="footer__img" alt="logo"/>
-    <ul>
-      <li class="row">
-        <div class="footer__picto"><i class="fas fa-utensils "></i></div>
-        Suggest a restaurant
-      </li>
-      <li class="row">
-        <div class="footer__picto"><i class="fas fa-hands-helping"></i></div>
-        Become a restaurant
-      </li>
-      <li>Legal</li>
-      <li>Contact</li>
-    </ul>
-  </footer>
-</body>
+<html lang="fr">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link rel="stylesheet" href="public/css/style.css">
+		<title>ohmyfood</title>
+		<script src="https://kit.fontawesome.com/a41e9403cf.js" crossorigin="anonymous"></script>
+	</head>
+	<body class=container-menu>
+		<header class="header">
+			<div class="row justify-content__center">
+				<a href="https://aholouchristopher.github.io/Ohmyfood_Project-3_11112021" style="display: flex; align-items: center; position:relative; left:-58px"><i class="fas fa-arrow-left"></i></a>
+				<img src="public/images/logo/ohmyfood.png" class="header__img" alt="logo" />
+			</div>
+			<img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" style="width: 100%; height: 250px ;object-fit: cover;" alt="plat restaurant"/>
+		</header>
+		<section class="menu">
+			<div class="card card--modif row justify-content__between">
+				<h2 class="menu__h2">La palette du goût </h2>
+				<div class="testanimation">
+					<div class="card__picto row justify-content__center">
+						<i class=" far fa-heart"></i>
+					</div>
+					<div class="picto2 row justify-content__center">
+						<i class="fas fa-heart"></i>
+					</div>
+				</div>
+			</div>
+			<!----entrée-->
+			<div class="plat-menu">
+				<article style class="card-Menu--anim-0">
+					<h3 class="menu__titre">ENTREES</h3>
+					<hr/>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Fricassée d'escargot</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Au piment d'espelette
+								</p>
+								<span class="card-Menu__price">25€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Foie gras de canad mi-cuit</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Et ses copeaux de truffe noire
+								</p>
+								<span class="card-Menu__price">35€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Oeuf au plat</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Assaisonné à la truffe sur lit de ikea 
+								</p>
+								<span class="card-Menu__price">20€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+				</article>
+				<!---------------plat-->
+				<article class="card-Menu--anim-1">
+					<h3 class="menu__titre">PLATS</h3>
+					<hr/>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Filet de boeuf au herbes</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Accompagné de sa ribambelle de légume
+								</p>
+								<span class="card-Menu__price">40€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Parmentier de queue de boeuf </h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									A la truffe noire sur sa purée de panais
+								</p>
+								<span class="card-Menu__price">35€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Filet de turbot</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									aux agrumes
+								</p>
+								<span class="card-Menu__price">44€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+				</article>
+				<!------dessert-->
+				<article class="card-Menu--anim-2">
+					<h3 class="menu__titre">DESSERT</h3>
+					<hr/>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Paris-Brest</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Revisité
+								</p>
+								<span class="card-Menu__price">18€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Macaron au chocolat d'exception</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									et glace à la vanille de Madagascar
+								</p>
+								<span class="card-Menu__price">22€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+					<div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+						<div class="card-Menu__body">
+							<h4 class="card__h4">Mousse au chocolat</h4>
+							<div class="row justify-content__between">
+								<p class="card-Menu__p">
+									Au piment d'espelette et à la truffe noire
+								</p>
+								<span class="card-Menu__price">23€</span>
+							</div>
+						</div>
+						<div class="rotate">
+							<span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+						</div>
+					</div>
+				</article>
+			</div>
+		</section>
+		<button class="header__btn btn--modif ">Commander</button>
+		<footer class="footer">
+			<img src="public/images/logo/ohmyfood@2x.svg" class="footer__img" alt="logo"/>
+			<ul>
+				<li class="row">
+					<div class="footer__picto">
+						<i class="fas fa-utensils "></i>
+					</div>
+					Suggest a restaurant
+				</li>
+				<li class="row">
+					<div class="footer__picto">
+						<i class="fas fa-hands-helping"></i>
+					</div>
+					Become a restaurant
+				</li>
+				<li>Legal</li>
+				<li>Contact</li>
+			</ul>
+		</footer>
+	</body>
 </html>
