--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
     <div class="bar">
         <div class="bar2"></div>
     </div>
-    <div class="animation_fadeIn_500ms">
+    <div class="animationFadeIn500ms">
         <header class="header">
             <img src="public/images/logo/ohmyfood.png" alt="logo" class="header__img"/>
             <div class="row header__background header__center">
